@@ -25,6 +25,7 @@
  * @test
  * @bug 4506596 6258510 6457659
  * @summary Tests PropertyEditor for value of type String with security manager
+ * @run main/othervm -Djava.security.manager=allow TestStringClass
  * @author Sergey Malenkov
  * @modules java.compiler
  *          java.desktop
