@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @build CanAccessTest
  * @modules java.base/jdk.internal.misc:+open
- * @run testng/othervm --illegal-access=deny CanAccessTest
+ * @run testng/othervm CanAccessTest
  * @summary Test AccessibleObject::canAccess method
  */
 
